--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "test": "cross-env NODE_ENV=testing jest --forceExit --detectOpenHandles  --silent",
     "test-routes": "npm run test -t router",
     "test-models": "npm run test -t model",
+    "test-controllers": "npm run test -t controller",
     "dev": "nodemon --exec yarn restart",
     "restart": "rimraf dist && yarn build && yarn start",
     "start": "node dist/index.js"
